# VectorDB-Benchmark

./: .gitignore  OPTIMIZATION_DONE.md  QUICK_START.md  README.md  README_ASYNC_OPTIMIZATION.md  SETUP_REMOTE.md  UV_SETUP_GUIDE.md
config/: phase1_config.yaml  phase2a_config.yaml  phase2b_config.yaml
datasets/: .gitignore  EXAMPLES.md  QUICK_REFERENCE.md  README.md
datasets/processed/: .gitkeep
datasets/scripts/: check_dataset.sh  convert_to_tsv.py  generate_test_data.py  prepare_dataset.sh  quick_start.sh  validate_tsv.py
phase1_embedding/: README.md  __init__.py  benchmark.py  compare_results.py  pyproject.toml  quick_async_test.bat  quick_async_test.sh  report_generator.py  run_phase1.py  test_async_performance.py
phase1_embedding/benchmarks/: __init__.py  async_inference_benchmark.py  gpu_monitor.py  inference_benchmark.py
phase1_embedding/cache/: __init__.py  vector_cache.py
phase1_embedding/data/: __init__.py  dataset_loader.py  ms_marco_loader.py
phase1_embedding/models/: __init__.py  async_xinference_client.py  xinference_client.py
phase2_search/: __init__.py  docker-compose.yml  pyproject.toml
phase2_search/benchmarks/: __init__.py
phase2_search/clients/: __init__.py
phase2_search/scenarios/: __init__.py
phase2_search/tools/: __init__.py
test/: README.md  async_client.py  async_client_tie.py  config.yaml  es_exporter.py  es_pdf_vectors_mapping.json  import_to_es.py  pdf_reader.py  pdf_vectorize.py  pdf_vectorize_tie.py  pyproject.toml  report_generator.py  requirements.txt
