[project]
name = "vectordb-benchmark-phase2"
version = "1.0.0"
description = "Phase 2: 向量搜索性能测试"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.12.0",
    "pymilvus>=2.5.0",
    "qdrant-client>=1.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "h5py>=3.10.0",
    "locust>=2.20.0",
    "pytest-benchmark>=4.0.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "prometheus-client>=0.20.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.3",
    "kaleido>=0.2.1",
    "pyyaml>=6.0.1",
    "colorlog>=6.8.0",
    "docker>=7.0.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
