[project]
name = "pdf-vectorize-test"
version = "1.0.0"
description = "PDF向量化测试脚本（临时测试）"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10.0",
    "httpx[http2]>=0.27.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "h5py>=3.10.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "plotly>=5.18.0",
    "elasticsearch>=8.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
